[package]
name = "conze"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.18", features = ["derive"] }
colored = "2.1.0"
comfy-table = "7.1.1"
crossterm = "0.28.1"
num-traits = "0.2.19"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
