[package]
name = "conze"
version = "0.1.0"
edition = "2021"
authors = ["Jain Ramchurn"]
description = "Explore holidays"
license = "MIT"
repository = "https://github.com/k3ii/conze"
homepage = "https://github.com/k3ii/conze"
readme = "README.md"
keywords = ["cli"]
categories = ["command-line-utilities"]
rust-version = "1.74.1"

[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.18", features = ["derive"] }
colored = "2.1.0"
comfy-table = "7.1.1"
crossterm = "0.28.1"
directories = "5.0.1"
num-traits = "0.2.19"
openssl = { version = "0.10.68", features = ["vendored"] }
prettytable = "0.10.0"
rand = "0.8.5"
regex = "1.11.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# A GitHub repo to push Homebrew formulas to
tap = "k3ii/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
